...
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_albums" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_artistas" />

        <Button
            android:id="@+id/collectors_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_coleccionistas" />

    </LinearLayout>

...
