...
    <string name="app_name">moviles-vinils-app-grupo-32</string>
    <string name="title_menu">Vinils-APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="collector_title">Collector Menu - Disponible en próximos releases</string>
    <string name="usuario_title">Usuario Menu</string>
    <string name="boton_albums">Albums</string>
    <string name="boton_artistas">Artistas</string>
    <string name="boton_coleccionistas">Coleccionistas</string>
    <string name="title_albums">Albums</string>
    <string name="title_album">Album</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_home_fragment">Vinilos</string>
    <string name="title_menu_usuario_fragment">Visitante</string>
    <string name="title_album_fragment">Albums</string>
...
