...
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    app:imageUrl= "@{musician.image}"
                    android:contentDescription="@{`Foto artista` + musician.name}"/>

                <TextView
                    android:id="@+id/textView1a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{musician.name}"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_black"
                    android:textAppearance="?attr/textAppearanceHeadline5"
...
