...
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@null">

                <TextView
                    android:id="@+id/collector_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{collector.name}"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_black"
                    android:textAppearance="?attr/textAppearanceHeadline5"
...
